fix: a bunch of style updates to solve flexboxes going too wide

--- a/ui/less/views/rightnav.less
+++ b/ui/less/views/rightnav.less
@@ -11,6 +11,9 @@
       text-align: center;
     }
   }
+  .msg-view {
+    width: 300px;
+  }
   .msg-view.summary .body .body-line {
     -webkit-line-clamp: 3;
   }
